// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderSpacing renders 0 1`] = `
Array [
  .c0 {
  border-spacing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderSpacing renders function 1`] = `
Array [
  .c0 {
  border-spacing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderSpacing renders invalid theme path 1`] = `
Array [
  .c0 {
  border-spacing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderSpacing renders negative number 1`] = `
Array [
  .c0 {
  border-spacing: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderSpacing renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-spacing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-spacing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-spacing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-spacing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-spacing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-spacing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-spacing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-spacing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-spacing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-spacing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-spacing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-spacing: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-spacing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-spacing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-spacing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-spacing: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderSpacing renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-spacing: July;
  }
}

@media April {
  .c0 {
    border-spacing: August;
  }
}

@media January {
  .c0 {
    border-spacing: September;
  }
}

@media April {
  .c0 {
    border-spacing: November;
  }
}

@media June {
  .c0 {
    border-spacing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-spacing: July;
  }
}

@media April {
  .c0 {
    border-spacing: August;
  }
}

@media January {
  .c0 {
    border-spacing: September;
  }
}

@media April {
  .c0 {
    border-spacing: November;
  }
}

@media June {
  .c0 {
    border-spacing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-spacing: January;
  }
}

@media April {
  .c0 {
    border-spacing: December;
  }
}

@media January {
  .c0 {
    border-spacing: April;
  }
}

@media April {
  .c0 {
    border-spacing: May;
  }
}

@media June {
  .c0 {
    border-spacing: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-spacing: January;
  }
}

@media April {
  .c0 {
    border-spacing: December;
  }
}

@media January {
  .c0 {
    border-spacing: April;
  }
}

@media April {
  .c0 {
    border-spacing: May;
  }
}

@media June {
  .c0 {
    border-spacing: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderSpacing renders postitive number 1`] = `
Array [
  .c0 {
  border-spacing: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderSpacing renders string 1`] = `
Array [
  .c0 {
  border-spacing: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderSpacing renders valid theme path 1`] = `
Array [
  .c0 {
  border-spacing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-spacing: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
